--- a/app/views/chart.html
+++ b/app/views/chart.html
@@ -86,6 +86,16 @@
             var options = mainChart.getOptions();
             var view = mainChart.getView();
 
+            if (config.sma.enable == true) {
+                for (i = 0; i < config.sma.indexes.length; i++) {
+                    options.series[config.sma.indexes[i]] = {type: 'line'};
+                    view.columns.push(config.candlestick.numViews + config.sma.indexes[i]);
+                }
+            }
+
+            console.log(options);
+            console.log(view);
+
             var controlWrapper = new google.visualization.ControlWrapper({
                 'controlType': 'ChartRangeFilter',
                 'containerId': 'filter_div',
@@ -134,8 +144,15 @@
                 dataTable.addColumn('number', 'High');
                 dataTable.addColumn('number', 'Volume');
 
-                if (data["sma"] != undefined) {
-
+                if (data["smas"] != undefined) {
+                    for (i = 0; i < data['smas'].length; i++){
+                        var smaData = data['smas'][i];
+                        if (smaData.length == 0){ continue; }
+                        config.dataTable.index += 1;
+                        config.sma.indexes[i] = config.dataTable.index;
+                        dataTable.addColumn('number', 'SMA' + smaData["period"].toString());
+                        config.sma.values[i] = smaData["values"]
+                    }
                 }
 
                 var googleChartData = [];
@@ -145,6 +162,16 @@
                     var candle = candles[i];
                     var date = new Date(candle.time);
                     var datas = [date, candle.low, candle.open, candle.close, candle.high, candle.volume];
+
+                    if (data["smas"] != undefined) {
+                        for (j = 0; j < config.sma.values.length; j++) {
+                            if (config.sma.values[j][i] == 0) {
+                                datas.push(null);
+                            } else {
+                                datas.push(config.sma.values[j][i]);
+                            }
+                        }
+                    }
 
                     googleChartData.push(datas)
                 }
